docs/4.x/appmesh_virtual_router.md
---
permalink: /appmesh_virtual_router/
---

# appmesh_virtual_router

`appmesh_virtual_router` represents the `aws_appmesh_virtual_router` Terraform resource.



This package contains functions and utilities for setting up the resource using Jsonnet code.


## Index

* [`fn new()`](#fn-new)
* [`fn newAttrs()`](#fn-newattrs)
* [`fn withMeshName()`](#fn-withmeshname)
* [`fn withMeshOwner()`](#fn-withmeshowner)
* [`fn withName()`](#fn-withname)
* [`fn withSpec()`](#fn-withspec)
* [`fn withSpecMixin()`](#fn-withspecmixin)
* [`fn withTags()`](#fn-withtags)
* [`fn withTagsAll()`](#fn-withtagsall)
* [`obj spec`](#obj-spec)
  * [`fn new()`](#fn-specnew)
  * [`obj spec.listener`](#obj-speclistener)
    * [`fn new()`](#fn-speclistenernew)
    * [`obj spec.listener.port_mapping`](#obj-speclistenerport_mapping)
      * [`fn new()`](#fn-speclistenerport_mappingnew)

## Fields

### fn new

```ts
new()
```


`aws.appmesh_virtual_router.new` injects a new `aws_appmesh_virtual_router` Terraform `resource`
block into the root module document.

Additionally, this inserts a private function into the `_ref` attribute that generates references to attributes of the
resource. For example, if you added a new instance to the root using:

    # arguments omitted for brevity
    aws.appmesh_virtual_router.new('some_id')

You can get the reference to the `id` field of the created `aws.appmesh_virtual_router` using the reference:

    $._ref.aws_appmesh_virtual_router.some_id.get('id')

This is the same as directly entering `"${ aws_appmesh_virtual_router.some_id.id }"` as the value.

NOTE: if you are chaining multiple resources together in a merge operation, you may not be able to use `super`, `self`,
or `$` to refer to the root object. Instead, make an explicit outer object using `local`.

**Args**:
  - `resourceLabel` (`string`): The name label of the block.
  - `mesh_name` (`string`): 
  - `mesh_owner` (`string`):  When `null`, the `mesh_owner` field will be omitted from the resulting object.
  - `name` (`string`): 
  - `tags` (`obj`):  When `null`, the `tags` field will be omitted from the resulting object.
  - `tags_all` (`obj`):  When `null`, the `tags_all` field will be omitted from the resulting object.
  - `spec` (`list[obj]`):  When `null`, the `spec` sub block will be omitted from the resulting object. When setting the sub block, it is recommended to construct the object using the [aws.appmesh_virtual_router.spec.new](#fn-appmeshvirtualrouterspecnew) constructor.

**Returns**:
- A mixin object that injects the new resource into the root Terraform configuration.


### fn newAttrs

```ts
newAttrs()
```


`aws.appmesh_virtual_router.newAttrs` constructs a new object with attributes and blocks configured for the `appmesh_virtual_router`
Terraform resource.

Unlike [aws.appmesh_virtual_router.new](#fn-appmeshvirtualrouternew), this function will not inject the `resource`
block into the root Terraform document. Instead, this must be passed in as the `attrs` argument for the
[tf.withResource](https://github.com/tf-libsonnet/core/tree/main/docs#fn-withresource) function to build a complete block.

This is most useful when you need to preprocess the attributes with functions, conditional, or looping logic prior to
injecting into a complete block.

**Args**:
  - `mesh_name` (`string`): 
  - `mesh_owner` (`string`):  When `null`, the `mesh_owner` field will be omitted from the resulting object.
  - `name` (`string`): 
  - `tags` (`obj`):  When `null`, the `tags` field will be omitted from the resulting object.
  - `tags_all` (`obj`):  When `null`, the `tags_all` field will be omitted from the resulting object.
  - `spec` (`list[obj]`):  When `null`, the `spec` sub block will be omitted from the resulting object. When setting the sub block, it is recommended to construct the object using the [aws.appmesh_virtual_router.spec.new](#fn-appmeshvirtualrouterspecnew) constructor.

**Returns**:
  - An attribute object that can be used with [tf.withResource](https://github.com/tf-libsonnet/core/tree/main/docs#fn-withresource) to construct a new `appmesh_virtual_router` resource into the root Terraform configuration.


### fn withMeshName

```ts
withMeshName()
```

`aws.appmesh_virtual_router.withMeshName` constructs a mixin object that can be merged into the `appmesh_virtual_router`
Terraform resource block to set or update the mesh_name field.



**Args**:
  - `resourceLabel` (`string`): The name label of the block to update.
  - `value` (`TODO`): The value to set for the `mesh_name` field.


### fn withMeshOwner

```ts
withMeshOwner()
```

`aws.appmesh_virtual_router.withMeshOwner` constructs a mixin object that can be merged into the `appmesh_virtual_router`
Terraform resource block to set or update the mesh_owner field.



**Args**:
  - `resourceLabel` (`string`): The name label of the block to update.
  - `value` (`TODO`): The value to set for the `mesh_owner` field.


### fn withName

```ts
withName()
```

`aws.appmesh_virtual_router.withName` constructs a mixin object that can be merged into the `appmesh_virtual_router`
Terraform resource block to set or update the name field.



**Args**:
  - `resourceLabel` (`string`): The name label of the block to update.
  - `value` (`TODO`): The value to set for the `name` field.


### fn withSpec

```ts
withSpec()
```

`aws.appmesh_virtual_router.withSpec` constructs a mixin object that can be merged into the `appmesh_virtual_router`
Terraform resource block to set or update the spec field.



**Args**:
  - `resourceLabel` (`string`): The name label of the block to update.
  - `value` (`TODO`): The value to set for the `spec` field.


### fn withSpecMixin

```ts
withSpecMixin()
```

`aws.appmesh_virtual_router.withSpecMixin` constructs a mixin object that can be merged into the `appmesh_virtual_router`
Terraform resource block to set or update the spec field.

This function will append the passed in array or object to the existing array. If you wish
to instead replace the array with the passed in `value`, use the [aws.appmesh_virtual_router.withSpec](TODO)
function.


**Args**:
  - `resourceLabel` (`string`): The name label of the block to update.
  - `value` (`TODO`): The value to set for the `spec` field.


### fn withTags

```ts
withTags()
```

`aws.appmesh_virtual_router.withTags` constructs a mixin object that can be merged into the `appmesh_virtual_router`
Terraform resource block to set or update the tags field.



**Args**:
  - `resourceLabel` (`string`): The name label of the block to update.
  - `value` (`TODO`): The value to set for the `tags` field.


### fn withTagsAll

```ts
withTagsAll()
```

`aws.appmesh_virtual_router.withTagsAll` constructs a mixin object that can be merged into the `appmesh_virtual_router`
Terraform resource block to set or update the tags_all field.



**Args**:
  - `resourceLabel` (`string`): The name label of the block to update.
  - `value` (`TODO`): The value to set for the `tags_all` field.


## obj spec



### fn spec.new

```ts
new()
```


`aws.appmesh_virtual_router.spec.new` constructs a new object with attributes and blocks configured for the `spec`
Terraform sub block.



**Args**:
  - `listener` (`list[obj]`):  When `null`, the `listener` sub block will be omitted from the resulting object. When setting the sub block, it is recommended to construct the object using the [aws.appmesh_virtual_router.spec.listener.new](#fn-speclistenernew) constructor.

**Returns**:
  - An attribute object that represents the `spec` sub block.


## obj spec.listener



### fn spec.listener.new

```ts
new()
```


`aws.appmesh_virtual_router.spec.listener.new` constructs a new object with attributes and blocks configured for the `listener`
Terraform sub block.



**Args**:
  - `port_mapping` (`list[obj]`):  When `null`, the `port_mapping` sub block will be omitted from the resulting object. When setting the sub block, it is recommended to construct the object using the [aws.appmesh_virtual_router.spec.listener.port_mapping.new](#fn-listenerportmappingnew) constructor.

**Returns**:
  - An attribute object that represents the `listener` sub block.


## obj spec.listener.port_mapping



### fn spec.listener.port_mapping.new

```ts
new()
```


`aws.appmesh_virtual_router.spec.listener.port_mapping.new` constructs a new object with attributes and blocks configured for the `port_mapping`
Terraform sub block.



**Args**:
  - `port` (`number`): 
  - `protocol` (`string`): 

**Returns**:
  - An attribute object that represents the `port_mapping` sub block.
